--- a/swagger-templates/src/main/resources/OktaJavaImpl/generatedAnnotation.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/generatedAnnotation.mustache
@@ -13,21 +13,4 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 }}
-{{>licenseInfo}}
-
-package {{package}};
-
-{{#imports}}
-import {{import}};
-{{/imports}}
-
-{{#serializableModel}}
-import java.io.Serializable;
-{{/serializableModel}}
-
-
-{{#models}}
-{{#model}}
-{{#isEnum}}{{>modelEnum}}{{/isEnum}}{{^isEnum}}{{>modelInterface}}{{/isEnum}}
-{{/model}}
-{{/models}}
+{{^hideGenerationTimestamp}}@javax.annotation.Generated(value = "{{generatorClass}}", date = "{{generatedDate}}"){{/hideGenerationTimestamp}}
