--- a/swagger-templates/src/main/resources/OktaJavaImpl/manifest.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/manifest.mustache
@@ -13,21 +13,6 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 }}
-{{>licenseInfo}}
-
-package {{package}};
-
-{{#imports}}
-import {{import}};
-{{/imports}}
-
-{{#serializableModel}}
-import java.io.Serializable;
-{{/serializableModel}}
-
-
-{{#models}}
-{{#model}}
-{{#isEnum}}{{>modelEnum}}{{/isEnum}}{{^isEnum}}{{>modelInterface}}{{/isEnum}}
-{{/model}}
-{{/models}}
+<manifest package="{{invokerPackage}}" xmlns:android="http://schemas.android.com/apk/res/android">
+    <application />
+</manifest>
