Add generated ‘API’ interfaces

--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -20,7 +20,7 @@ package {{package}};
 {{#imports}}
 import {{import}};
 {{/imports}}
-import com.okta.sdk.api.model.*;
+import com.okta.sdk.model.*;
 
 import com.okta.sdk.impl.ds.InternalDataStore;
 import com.okta.sdk.impl.resource.*;
