Supporting extension x-okta-links
First pass at the logic of _moving_ a method from the ‘API’ client to the model.
Might need to rename packages as the models are now more resources then models.
The clients should get trimmed down automatically when the swagger spec is updated and more operations are moved the respective models

--- a/swagger-templates/src/main/resources/OktaJava/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/api.mustache
@@ -33,8 +33,7 @@ import java.util.LinkedHashMap;
 {{#operations}}
 public interface {{classname}} {
 
-
-    {{#operation}}
+    {{#operation}}{{^vendorExtensions.moved}}
     /**
     * {{summary}}
     * {{notes}}
@@ -47,7 +46,7 @@ public interface {{classname}} {
     */
     public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}void {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}});
 
-    {{/operation}}
+    {{/vendorExtensions.moved}}{{/operation}}
 
     }
 {{/operations}}
