--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodDelete.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodDelete.mustache
@@ -2,4 +2,4 @@
     // queryArgs.put("{{paramName}}", {{paramName}});{{/queryParams}}
     String href = "{{{vendorExtensions.hrefFiltered}}}";
 
-    dataStore.delete(href);
+    getDataStore().delete(href);
