Renamed com.okta.sdk.model package to com.okta.sdk.resource
The models now support methods so ‘resource’ is a better fit

--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelListResourceImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelListResourceImpl.mustache
@@ -14,7 +14,7 @@
     limitations under the License.
 }}
 
-import com.okta.sdk.model.*;
+import com.okta.sdk.resource.*;
 import com.okta.sdk.impl.ds.InternalDataStore;
 import com.okta.sdk.impl.resource.AbstractCollectionResource;
 import com.okta.sdk.impl.resource.Property;
