First pass at removing ApiKey, and using ClientCredentials/Resolver instead

--- a/swagger-templates/src/main/resources/OktaJava/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/api.mustache
@@ -34,7 +34,7 @@ import com.okta.sdk.ds.DataStore;
 * <p/>
 * For example:
 * <pre>
-* String path = System.getProperty("user.home") + "/.okta/<a href="http://www.okta.com/docs/get-api-key">apiKey.properties</a>";
+* String path = System.getProperty("user.home") + "/.okta/<a href="http://www.okta.com/docs/get-api-key">clientCredentials.properties</a>";
 * Client client = {@link Clients Clients}.{@link com.okta.sdk.client.Clients#builder() builder()}
 *     .{@link com.okta.sdk.client.ClientBuilder#setApiKey(ApiKey) setApiKey}({@link ApiKeys ApiKeys}.builder()
 *         .setFileLocation(path)
