Added support for x-oktaDynamicSchema flag
AbstractResource now extends Map, so we just need to add the Map interface to the resource when the x-oktaDynamicSchema is set

--- a/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
@@ -16,6 +16,7 @@
 import com.okta.sdk.resource.Deletable;
 import com.okta.sdk.resource.Resource;
 import com.okta.sdk.resource.Saveable;
+import java.util.Map;
 {{#serializableModel}}
 import java.io.Serializable;
 {{/serializableModel}}
@@ -25,7 +26,7 @@ import java.io.Serializable;
  * {{#description}}{{.}}{{/description}}{{^description}}{{classname}}{{/description}}
  */
 {{>generatedAnnotation}}{{#discriminator}}{{>typeInfoAnnotation}}{{/discriminator}}
-public interface {{classname}} extends Resource, Saveable, Deletable {
+public interface {{classname}} extends Resource, Saveable{{#vendorExtensions.x-oktaDynamicSchema}}, Map<String, Object>{{/vendorExtensions.x-oktaDynamicSchema}} {
 
 {{#vars}}
     {{#vendorExtensions.extraAnnotation}}
